examples/pos/array_ref.pcl
program array_ref;

procedure foo(var s: array of char);
begin
end;
begin
end.
