examples/neg/recursive.pcl
program recurseme;

procedure recursive();
begin
  recursive();
end;

begin
  recursive();
end.
